--- a/index.html
+++ b/index.html
@@ -135,18 +135,18 @@
                 <a type="button" href="Dcss3-css3考试" class="btn btn-primary btn-lg btn-block" target="_Blank">css3效果</a>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml5-3.png" alt="">
-                <a type="button" href="ZHTML5-四个圈" class="btn btn-primary btn-lg btn-block" target="_Blank">响应式网站</a>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml5-4.png" alt="">
-                <a type="button" href="DHTML5-Laravel" class="btn btn-primary btn-lg btn-block" target="_Blank">响应式网页</a>
-            </div>
-        </div>
+        <!--<div class="col-md-4">-->
+            <!--<div class="">-->
+                <!--<img src="img/Dhtml5-3.png" alt="">-->
+                <!--<a type="button" href="ZHTML5-四个圈" class="btn btn-primary btn-lg btn-block" target="_Blank">响应式网站</a>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-md-4">-->
+            <!--<div class="">-->
+                <!--<img src="img/Dhtml5-4.png" alt="">-->
+                <!--<a type="button" href="DHTML5-Laravel" class="btn btn-primary btn-lg btn-block" target="_Blank">响应式网页</a>-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="col-md-4">
             <div class="">
                 <img src="img/Dhtml5-5.png" alt="">
