--- a/微场景--双选会邀请函/index.html
+++ b/微场景--双选会邀请函/index.html
@@ -365,7 +365,7 @@
         <div class="swiper-slide">
             <div class="s10">
                 <div class="header">
-                    <h2 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">在线留言
+                    <h2 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">在线报名
                         <small>shengbangshenghua</small>
                     </h2>
                 </div>
