--- a/双选会邀请函/index.html
+++ b/双选会邀请函/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="Swiper-4.0.7/dist/css/swiper.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
+    <link rel="stylesheet" href="Swiper-4.0.7/dist/css/swiper.css">
     <!-- 动画 -->
     <link rel="stylesheet" href="css/animate.min.css">
 
