--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>在线预览</title>
+    <title>在线预览仓库</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="plug/bootstrap-3.2.0-dist/css/bootstrap.min.css">
     <style>
