--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
             width: 100%;
             height: 400px;
         }
-
         .col-md-4 {
             margin-top: 20px;
             margin-bottom: 20px;
+        }
+        .col-md-4 div{
+            border: 2px #f2f2f2 solid;
+            padding: 10px;
+            box-shadow: 5px 5px 5px #dcdcdc;
         }
     </style>
 </head>
