--- a/index.html
+++ b/index.html
@@ -5,220 +5,229 @@
     <title>在线预览仓库</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="plug/bootstrap-3.2.0-dist/css/bootstrap.min.css">
-    <style>
-        img {
-            width: 100%;
-            height: 400px;
-        }
-        .col-md-4 {
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-        .col-md-4 div{
-            border: 2px #f2f2f2 solid;
-            padding: 10px;
-            box-shadow: 5px 5px 5px #dcdcdc;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <h1 align="center">微场景</h1>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/weichangjing.png" alt="">
-                <a type="button" href="微场景--年会邀请函" class="btn btn-primary btn-lg btn-block" target="_Blank">微场景 - -
-                    年会邀请函</a>
+<!--&lt;!&ndash; 代码部分begin &ndash;&gt;-->
+<!--<div class="sky">-->
+    <!--<div class="clouds_one"></div>-->
+    <!--<div class="clouds_two"></div>-->
+    <!--<div class="clouds_three"></div>-->
+<!--</div>-->
+<!--&lt;!&ndash; 代码部分end &ndash;&gt;-->
+
+<div class="sky">
+    <div class="clouds_one"></div>
+    <div class="clouds_two"></div>
+    <div class="clouds_three"></div>
+
+    <div class="container">
+        <div class="row">
+            <h1 align="center">微场景</h1>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/weichangjing.png" alt="">
+                    <a type="button" href="微场景--年会邀请函" class="btn btn-primary btn-lg btn-block" target="_Blank">微场景 - -
+                        年会邀请函</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/yaoqinghan.png" alt="">
-                <a type="button" href="双选会邀请函" class="btn btn-primary btn-lg btn-block" target="_Blank">微场景 - -
-                    双选会邀请函</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/yaoqinghan.png" alt="">
+                    <a type="button" href="双选会邀请函" class="btn btn-primary btn-lg btn-block" target="_Blank">微场景 - -
+                        双选会邀请函</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="container">
-    <div class="row">
-        <h1 align="center">HTML5+CSS3</h1>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml5-1.png" alt="">
-                <a type="button" href="Dcss3-碰撞" class="btn btn-primary btn-lg btn-block" target="_Blank">css3效果</a>
+    <div class="container">
+        <div class="row">
+            <h1 align="center">HTML5+CSS3</h1>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml5-1.png" alt="">
+                    <a type="button" href="Dcss3-碰撞" class="btn btn-primary btn-lg btn-block" target="_Blank">css3效果</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml5-2.png" alt="">
-                <a type="button" href="Dcss3-css3考试" class="btn btn-primary btn-lg btn-block" target="_Blank">css3效果</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml5-2.png" alt="">
+                    <a type="button" href="Dcss3-css3考试" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">css3效果</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml5-3.png" alt="">
-                <a type="button" href="ZHTML5-4个圈" class="btn btn-primary btn-lg btn-block" target="_Blank">响应式网站</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml5-3.png" alt="">
+                    <a type="button" href="ZHTML5-4个圈" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">响应式网站</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml5-4.png" alt="">
-                <a type="button" href="DHTML5-Laravel" class="btn btn-primary btn-lg btn-block"
-                   target="_Blank">响应式网页</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml5-4.png" alt="">
+                    <a type="button" href="DHTML5-Laravel" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">响应式网页</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml5-5.png" alt="">
-                <a type="button" href="DHTML5-Repute" class="btn btn-primary btn-lg btn-block"
-                   target="_Blank">响应式网站页</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml5-5.png" alt="">
+                    <a type="button" href="DHTML5-Repute" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">响应式网站页</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml5-6.png" alt="">
-                <a type="button" href="DHTML5-恒望科技" class="btn btn-primary btn-lg btn-block" target="_Blank">响应式网页</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml5-6.png" alt="">
+                    <a type="button" href="DHTML5-恒望科技" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">响应式网页</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml5-7.png" alt="">
-                <a type="button" href="DHTML5-五一作业" class="btn btn-primary btn-lg btn-block" target="_Blank">响应式网页</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml5-7.png" alt="">
+                    <a type="button" href="DHTML5-五一作业" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">响应式网页</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml5-8.png" alt="">
-                <a type="button" href="DHTML5-响应式博客" class="btn btn-primary btn-lg btn-block" target="_Blank">响应式网页</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml5-8.png" alt="">
+                    <a type="button" href="DHTML5-响应式博客" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">响应式网页</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="container">
-    <div class="row">
-        <h1 align="center">bootstrap</h1>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/fabiaozhuguang.png" alt="">
-                <a type="button" href="ZHTMl5-珠光卫浴" class="btn btn-primary btn-lg btn-block" target="_Blank">法标珠光卫浴</a>
+    <div class="container">
+        <div class="row">
+            <h1 align="center">bootstrap</h1>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/fabiaozhuguang.png" alt="">
+                    <a type="button" href="ZHTMl5-珠光卫浴" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">法标珠光卫浴</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/bootstrap-1.png" alt="">
-                <a type="button" href="bootstrap1-Genius" class="btn btn-primary btn-lg btn-block" target="_Blank">Genius</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/bootstrap-1.png" alt="">
+                    <a type="button" href="bootstrap1-Genius" class="btn btn-primary btn-lg btn-block" target="_Blank">Genius</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/bootstrap-2.png" alt="">
-                <a type="button" href="bootstrap2-INDUSTRY" class="btn btn-primary btn-lg btn-block" target="_Blank">INDUSTRY</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/bootstrap-2.png" alt="">
+                    <a type="button" href="bootstrap2-INDUSTRY" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">INDUSTRY</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/bootstrap-4.png" alt="">
-                <a type="button" href="bootstrap3-暑假作业" class="btn btn-primary btn-lg btn-block"
-                   target="_Blank">作品展示</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/bootstrap-4.png" alt="">
+                    <a type="button" href="bootstrap3-暑假作业" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">作品展示</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="container">
-    <div class="row">
-        <h1 align="center">js网页</h1>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/js-1.png" alt="">
-                <a type="button" href="高级js作业" class="btn btn-primary btn-lg btn-block" target="_Blank">js作业</a>
+    <div class="container">
+        <div class="row">
+            <h1 align="center">js网页</h1>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/js-1.png" alt="">
+                    <a type="button" href="高级js作业" class="btn btn-primary btn-lg btn-block" target="_Blank">js作业</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 
-<div class="container">
-    <div class="row">
-        <h1 align="center">HTML</h1>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml-1.png" alt="">
-                <a type="button" href="Dhtml-银泰" class="btn btn-primary btn-lg btn-block" target="_Blank">银泰</a>
+    <div class="container">
+        <div class="row">
+            <h1 align="center">HTML</h1>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml-1.png" alt="">
+                    <a type="button" href="Dhtml-银泰" class="btn btn-primary btn-lg btn-block" target="_Blank">银泰</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml-2.png" alt="">
-                <a type="button" href="Dhtml-EVENT" class="btn btn-primary btn-lg btn-block" target="_Blank">EVENT</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml-2.png" alt="">
+                    <a type="button" href="Dhtml-EVENT" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">EVENT</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml-3.png" alt="">
-                <a type="button" href="Dhtml-goodCooh" class="btn btn-primary btn-lg btn-block"
-                   target="_Blank">goodCooh</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml-3.png" alt="">
+                    <a type="button" href="Dhtml-goodCooh" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">goodCooh</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml-4.png" alt="">
-                <a type="button" href="Dhtml-Troop" class="btn btn-primary btn-lg btn-block" target="_Blank">Troop</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml-4.png" alt="">
+                    <a type="button" href="Dhtml-Troop" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">Troop</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml-5.png" alt="">
-                <a type="button" href="D-html-HOPE CENTER" class="btn btn-primary btn-lg btn-block" target="_Blank">HOPE
-                    CENTER</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml-5.png" alt="">
+                    <a type="button" href="D-html-HOPE CENTER" class="btn btn-primary btn-lg btn-block" target="_Blank">HOPE
+                        CENTER</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dhtml-6.png" alt="">
-                <a type="button" href="D-html-Real Rstate" class="btn btn-primary btn-lg btn-block" target="_Blank">Real
-                    Rstate</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dhtml-6.png" alt="">
+                    <a type="button" href="D-html-Real Rstate" class="btn btn-primary btn-lg btn-block" target="_Blank">Real
+                        Rstate</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Zhtml-1.png" alt="">
-                <a type="button" href="Zhtml-DIVIMG" class="btn btn-primary btn-lg btn-block" target="_Blank">DIVIMG</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Zhtml-1.png" alt="">
+                    <a type="button" href="Zhtml-DIVIMG" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">DIVIMG</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Zhtml-2.png" alt="">
-                <a type="button" href="Zhtml-HOUSE" class="btn btn-primary btn-lg btn-block"
-                   target="_Blank">Zhtml-HOUSE</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Zhtml-2.png" alt="">
+                    <a type="button" href="Zhtml-HOUSE" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">Zhtml-HOUSE</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Zhtml-3.png" alt="">
-                <a type="button" href="Zhtml-旗帜" class="btn btn-primary btn-lg btn-block" target="_Blank">旗帜</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Zhtml-3.png" alt="">
+                    <a type="button" href="Zhtml-旗帜" class="btn btn-primary btn-lg btn-block" target="_Blank">旗帜</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dps-html-1.png" alt="">
-                <a type="button" href="Dhtml-木纹网页" class="btn btn-primary btn-lg btn-block" target="_Blank">木纹网页</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dps-html-1.png" alt="">
+                    <a type="button" href="Dhtml-木纹网页" class="btn btn-primary btn-lg btn-block" target="_Blank">木纹网页</a>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="">
-                <img src="img/Dps-html-2.png" alt="">
-                <a type="button" href="Dhtml-汽车网页" class="btn btn-primary btn-lg btn-block" target="_Blank">汽车网页</a>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/Dps-html-2.png" alt="">
+                    <a type="button" href="Dhtml-汽车网页" class="btn btn-primary btn-lg btn-block" target="_Blank">汽车网页</a>
+                </div>
             </div>
         </div>
     </div>
+
 </div>
-
-
 <script src="plug/jquery/jquery-1.11.1.min.js"></script>
 <script src="plug/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
 </body>
