--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<!--&lt;!&ndash; 代码部分begin &ndash;&gt;-->
-<!--<div class="sky">-->
-    <!--<div class="clouds_one"></div>-->
-    <!--<div class="clouds_two"></div>-->
-    <!--<div class="clouds_three"></div>-->
-<!--</div>-->
-<!--&lt;!&ndash; 代码部分end &ndash;&gt;-->
+
 
 <div class="sky">
     <div class="clouds_one"></div>
@@ -105,6 +99,13 @@
     <div class="container">
         <div class="row">
             <h1 align="center">bootstrap</h1>
+            <div class="col-md-4">
+                <div class="">
+                    <img src="img/meizu.png" alt="">
+                    <a type="button" href="手机端魅族" class="btn btn-primary btn-lg btn-block"
+                       target="_Blank">移动端魅族</a>
+                </div>
+            </div>
             <div class="col-md-4">
                 <div class="">
                     <img src="img/fabiaozhuguang.png" alt="">
